--- a/etournament/Views/User/Index.cshtml
+++ b/etournament/Views/User/Index.cshtml
@@ -3,7 +3,7 @@
 @model PagedList.IPagedList<etournament.Models.tbl_category>
 
 @{
-    ViewBag.Title = "User View";
+    ViewBag.Title = "Home";
 }
 <head>
     <style>
@@ -29,10 +29,10 @@
             {
                 foreach (var item in Model)
                 {
-                    <div class="col-lg-3 col-md-3 container img" style="height: 5%; margin-top:60px;">
+                    <div class="col-lg-3 col-md-3 container img" style=" margin-top:60px;">
                         <a href="@Url.Action("Contests", "User", new { id = @item.c_id})" , id="@item.c_id" class="img ">
                             <img src=@Url.Content(item.c_img) style=" height:100%; width:100%;margin-bottom:20px;text-align:center;filter:brightness(30%);" class="  img-responsive" />
-                            <div class="centered " style="font-family:Pattaya; position:absolute; top:50%; left:50%; transform: translate(-50%, -50%); font-size:25px;color:white">@item.c_name</div>
+                            <div class="centered " style="font-family:Alegreya; position:absolute; top:50%; left:50%; transform: translate(-50%, -50%); font-size:25px;color:white">@item.c_name</div>
                         </a>
                         @*@Html.ActionLink(" ", "Contests","User", null ,new {@style = "background: url('" + @Url.Content(item.c_img)+ "') height:100%; width:100%;margin-bottom:20px;"})*@
                         @*<h4 style="color:black; font-family:Arial; text-align:center">@Html.ActionLink(@item.c_name, "Contests", new { id = @item.c_id, }, null)</h4>*@
