--- a/etournament/Views/User/Viewcontest.cshtml
+++ b/etournament/Views/User/Viewcontest.cshtml
@@ -18,73 +18,78 @@
                     <form class="form-group  "style="">
                         <div class="row"  style="margin:auto">
                             <div class="col-lg-8  ">
-                                <h2 class=" "><span class="heading">Description</span></h2>
+                                <h2 class="row"><span class="heading"><b>Description</b></span></h2>
                                 <hr />
-                                <div class="col-lg-9">
+                                <div class="col-lg-12 row">
                                     <div class="form-group ptext">
-                                        <h3 class=" ptext">@Model.t_desc</h3>
+                                        <h4 class=" ptext">@Model.t_desc</h4>
                                     </div>
-                                    <div class="form-group ptext" style="margin-top:8%">
-                                        <h3 class="h3"><b> Address:</b></h3> <h3 class="">@Model.t_add</h3>
+                                    <div class="form-group " style="margin-top:8%">
+                                        <h3 class="heading"> Address</h3> <h4 class="ptext">@Model.t_add</h4>
+                                    </div>
+
+                                </div>
+                                <div class="row" style="margin-bottom:20%;">
+                                    <h3 class="h3"><span class="heading"><b>Organized By</b></span></h3>
+                                    <hr />
+
+                                    <div class="img-rounded table-bordered btn-primary col-lg-5 " style="margin-left:2%;margin-bottom:3%; height:150px">
+                                        <div class="container row " style="width: 100%; margin:auto; margin-top:1%">
+                                            <div class="col-md-9">
+                                                <h4 class="h4">  @Model.u_name</h4>
+                                            </div>
+                                            <div class="col-lg-3 ">
+
+                                                <img class="img-circle" style="height:40px ; margin-top:2%" src="@Url.Content(Model.u_img)" />
+                                            </div>
+                                        </div>
+                                        <div class="col-md-9 " style="margin:auto ; margin-left:5%">
+                                            <p class="" style="font-size:12px">@Model.u_desc </p>
+                                        </div>
+
                                     </div>
                                 </div>
-                                
+
+
                             </div>
                             <div class="col-lg-3 ptext" style="margin-left:1%; margin-top:3%; background-color:#3AAFA9; ">
-                                <h4><small class="text-right text">Tournament Id:@Model.t_id</small></h4>
+                                <h4><small class="text-right text heading">Tournament Id:@Model.t_id</small></h4>
                                 <div class="form-group">
-                                    <h3> Sport</h3><h4> @Model.c_name</h4>
+                                    <h3 class="heading"> Sport</h3><h4> @Model.c_name</h4>
                                 </div>
                                 <div class="form-group">
-                                    <h3>Website</h3><h4><a href="https://www.google.com" style="; color:black"> @Model.t_website </a></h4>
+                                    <h3 class="heading">Website</h3><h4><a href="https://www.google.com" style=" color:black"> @Model.t_website </a></h4>
                                 </div>
                                 <div class="form-group">
-                                    <h3>Start Date</h3><h4> @Model.t_dts.ToLongDateString()</h4>
+                                    <h3 class="heading">Start Date</h3><h4> @Model.t_dts.ToLongDateString()</h4>
                                 </div>
                                 <div class="form-group">
-                                    <h3>End Date</h3><h4> @Model.t_dte.ToLongDateString()</h4>
+                                    <h3 class="heading">End Date</h3><h4> @Model.t_dte.ToLongDateString()</h4>
                                 </div>
                                 <div class="form-group">
-                                    <h3>Entry fee </h3><h4>₹ @Model.t_entryfee</h4>
+                                    <h3 class="heading">Entry fee </h3><h4>₹ @Model.t_entryfee</h4>
                                 </div>
                                 <div class="form-group">
-                                    <h3>Prize</h3><h4>₹ @Model.t_prize</h4>
+                                    <h3 class="heading">Prize</h3><h4>₹ @Model.t_prize</h4>
                                 </div>
                                 <div class="form-group">
-                                    <h3>Location</h3><h4> @Model.t_location</h4>
+                                    <h3 class="heading">Location</h3><h4> @Model.t_location</h4>
                                 </div>
                                 <div class="form-group">
-                                    <h3>Contact</h3> <h4>@Model.t_contact</h4>
+                                    <h3 class="heading">Contact</h3> <h4>@Model.t_contact</h4>
                                    <h4> @Model.u_email</h4>
                                 </div>
                             </div>
                         </div>
                         <div class="container" style="margin:auto; width:100%; margin-bottom:4%">
-                            <h3 class="h3"><span class="heading">Organized By</span></h3>
-                            <hr />
-
-                            <div class="img-rounded table-bordered btn-primary" style="margin-left:2%;margin-bottom:3%; width:30%; height:150px">
-                                <div class="container row " style="width: 100%; margin:auto; margin-top:1%">
-                                    <div class="col-md-9">
-                                        <h4 class="h4">  @Model.u_name</h4>
-                                    </div>
-                                    <div class="col-lg-3 ">
-
-                                        <img class="img-circle" style="height:40px ; margin-top:2%" src="@Url.Content(Model.u_img)" />
-                                    </div>
-                                </div>
-                                <div class="col-md-9 " style="margin:auto ; margin-left:5%">
-                                    <p class="" style="font-size:12px">@Model.u_desc </p>
-                                </div>
-
-                            </div>
+                            
                             <div class="container " style="margin : auto;">
                                 @if (Convert.ToInt32(Session["u_id"]) == Convert.ToInt32(Model.t_fk))
                                 {
-                                    
-                                    @Html.ActionLink("Delete", "DeleteT","User", new { id = Model.t_id,@class="btn  btn-danger",})
+                                    <a href="@Url.Action("DeleteT", "User", new { id = Model.t_id})" class="btn btn-danger">Delete</a>
+                                
                                 }
-                                    
+                                @Html.ActionLink("Apply", "Apply", "User", new { id = Model.t_id, @class = "btn  btn-info", })
                             </div>
                         </div>
                             
